--- a/bisect-unittests/BisectDemo/BisectDemo/Base.lproj/Main.storyboard
+++ b/bisect-unittests/BisectDemo/BisectDemo/Base.lproj/Main.storyboard
@@ -24,6 +24,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="FOz-c0-aH5">
+                                <rect key="frame" x="16" y="277" width="345" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="sliderValudChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="hUd-Ok-ndh"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -34,10 +41,12 @@
                     </view>
                     <connections>
                         <outlet property="label" destination="9Vb-Mp-G26" id="tLO-zb-NDb"/>
+                        <outlet property="slider" destination="FOz-c0-aH5" id="Qvn-jD-3Bf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="37.600000000000001" y="31.934032983508249"/>
         </scene>
     </scenes>
 </document>
