Change slider to green

--- a/bisect-unittests/BisectDemo/BisectDemo/Base.lproj/Main.storyboard
+++ b/bisect-unittests/BisectDemo/BisectDemo/Base.lproj/Main.storyboard
@@ -27,6 +27,7 @@
                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="FOz-c0-aH5">
                                 <rect key="frame" x="16" y="277" width="345" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" red="0.45009386540000001" green="0.98132258650000004" blue="0.4743030667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <action selector="sliderValudChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="hUd-Ok-ndh"/>
                                 </connections>
