--- a/bisect-unittests/BisectDemo/BisectDemo/Base.lproj/Main.storyboard
+++ b/bisect-unittests/BisectDemo/BisectDemo/Base.lproj/Main.storyboard
@@ -24,10 +24,12 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="FOz-c0-aH5">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="FOz-c0-aH5">
                                 <rect key="frame" x="16" y="277" width="345" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" red="0.45009386540000001" green="0.98132258650000004" blue="0.4743030667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="29" id="AGM-aW-khw"/>
+                                </constraints>
                                 <connections>
                                     <action selector="sliderValudChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="hUd-Ok-ndh"/>
                                 </connections>
@@ -35,6 +37,9 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FOz-c0-aH5" secondAttribute="trailing" constant="16" id="GKt-vR-3IS"/>
+                            <constraint firstItem="FOz-c0-aH5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="18" id="Ggr-Es-Cfv"/>
+                            <constraint firstItem="9Vb-Mp-G26" firstAttribute="top" secondItem="FOz-c0-aH5" secondAttribute="bottom" constant="27" id="Mww-Ot-yzr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="centerY" secondItem="9Vb-Mp-G26" secondAttribute="centerY" id="kiu-iF-S7B"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="centerX" secondItem="9Vb-Mp-G26" secondAttribute="centerX" id="xAW-Cd-3SG"/>
                         </constraints>
